2011-09-16  Stefano Lattarini  <stefano.lattarini@gmail.com>

	automake: remove special handling of `ANSI2KNR' make variable
	* automake.in (define_configure_variable): Remove special-cased
	handling of `ANSI2KNR' variable.  Related minor simplifications.

2011-09-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	cosmetics: fix various typos and grammaros
	* NEWS: Fix typos.
	* tests/py-compile-basic.test: Likewise.
	* tests/py-compile-basedir.test: Fix botched wording in comments.
	* tests/py-compile-option-terminate.test: Fix typo and incomplete
	comment.
	Suggestions by Peter Rosin.

2011-09-18  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: test interactions of `nobase_' and `nodist_'
	* tests/nobase-nodist.test: New test.
	* tests/Makefile.am (TESTS): Add it.

2011-09-18  Stefano Lattarini  <stefano.lattarini@gmail.com>

	java: fix various blunders in test 'java-mix.test'
	* tests/java-mix.test: Add missing call to `set -e'.  Fix inverted
	semantics (`.java' files are expected *not* to be distributed by
	default, not the other way round).  Fix various typos in the name
	of the `.java' files.  Correct other minor blunders.  Improve some
	comments.

2011-09-15  Stefano Lattarini  <stefano.lattarini@gmail.com>

	automake: remove code duplication in 'handle_tests'
	* automake.in (handle_tests): Factor out some code dealing with
	test extensions and rules for generation of `.log' files into ...
	(handle_per_suffix_test): ... this new subroutine.
	* tests/parallel-tests-exeext.test: New test.
	* tests/Makefile.am (TESTS): Update.

2011-09-11  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failure on fast machines
	* tests/aclocal-acdir.test: Avoid spurious failures due to caching
	issues, by cleaning the autom4te cache between all the aclocal
	invocations, and by always calling autoconf with the `--force'
	flag.

2011-09-09  Stefano Lattarini  <stefano.lattarini@gmail.com>

	aclocal: better URL reference in error message