@@ -1,0 +1,59 @@
+#! /bin/sh
+# Copyright (C) 2011 Free Software Foundation, Inc.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# Check regression of parallel-tests:
+#  - `test-driver' script not correctly distributed when TESTS is
+#    defined in a subdir Makefile
+
+parallel_tests=yes
+. ./defs || Exit 1
+
+cat >> configure.in << 'END'
+AC_CONFIG_FILES([tests/Makefile])
+AC_OUTPUT
+END
+
+mkdir tests
+
+cat > Makefile.am << 'END'
+SUBDIRS = tests
+test0:
+	echo ' ' $(DIST_COMMON) ' ' | grep '[ /]test-driver '
+test1: distdir
+	ls -l $(distdir) $(distdir)/* ;: For debugging.
+	test -f $(distdir)/test-driver
+.PHONY: test0 test1
+END
+
+cat > tests/Makefile.am << 'END'
+TESTS = foo.test
+EXTRA_DIST = $(TESTS)
+END
+
+cat > tests/foo.test << 'END'
+#!/bin/sh
+exit 0
+END
+chmod a+x tests/foo.test
+
+$ACLOCAL
+$AUTOCONF
+$AUTOMAKE -a
+./configure
+$MAKE test0 test1
+$MAKE distcheck
+
+:
