@@ -1,3 +1,9 @@
+2011-09-18  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	parallel-tests: expose automake bug#9546
+	* tests/test-driver-is-distributed.test: New test.
+	* tests/Makefile.am (TESTS, XFAIL_TESTS): Add it.
+
 2011-09-16  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	automake: remove special handling of `ANSI2KNR' make variable
